--- a/package.json
+++ b/package.json
@@ -2,8 +2,16 @@
   "name": "users-service",
   "version": "1.0.0",
   "description": "users-service",
-  "main": "index.js",
-  "dependencies": {},
+  "main": "server.js",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "method-override": "^3.0.0",
+    "mongoose": "^5.9.16",
+    "morgan": "^1.10.0",
+    "use-strict": "^1.0.1"
+  },
   "devDependencies": {
     "@babel/core": "^7.10.2",
     "@babel/preset-env": "^7.10.2",
@@ -20,6 +28,7 @@
     "karma-jasmine-html-reporter": "^1.5.4",
     "karma-requirejs": "^1.1.0",
     "karma-spec-reporter": "0.0.32",
+    "nodemon": "^2.0.4",
     "requirejs": "^2.3.6",
     "watchify": "^3.11.1"
   },
