--- a/package.json
+++ b/package.json
@@ -13,27 +13,16 @@
     "use-strict": "^1.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.2",
-    "@babel/preset-env": "^7.10.2",
     "brfs": "^2.0.2",
-    "browserify": "^16.5.1",
     "jasmine": "^3.5.0",
     "jasmine-console-reporter": "^3.1.0",
     "jasmine-core": "^3.5.0",
-    "karma": "^5.0.9",
-    "karma-babel-preprocessor": "^8.0.1",
-    "karma-browserify": "^7.0.0",
-    "karma-chrome-launcher": "^3.1.0",
-    "karma-jasmine": "^3.3.1",
-    "karma-jasmine-html-reporter": "^1.5.4",
-    "karma-requirejs": "^1.1.0",
-    "karma-spec-reporter": "0.0.32",
     "nodemon": "^2.0.4",
-    "requirejs": "^2.3.6",
+    "supertest": "^4.0.2",
     "watchify": "^3.11.1"
   },
   "scripts": {
-    "test": "karma start karma.conf.js"
+    "test": "jasmine"
   },
   "author": "Rodrigo Miyazaki",
   "license": "ISC",
@@ -47,7 +36,6 @@
   "keywords": [
     "Node",
     "Express",
-    "Karma",
     "Jasmine"
   ],
   "bugs": {
