--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jasmine": "^3.5.0",
     "jasmine-console-reporter": "^3.1.0",
     "jasmine-core": "^3.5.0",
+    "jasmine-spec-reporter": "^5.0.2",
     "nodemon": "^2.0.4",
     "supertest": "^4.0.2",
     "watchify": "^3.11.1"
