--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2.1
 orbs:
-  node: circleci/node@1.1.6
+  node: circleci/node@2.0.2
 jobs:
   build-and-test:
     docker:
@@ -14,6 +14,14 @@ jobs:
             - run: npm install
             - run: npm test
 workflows:
-    build-and-test:
-      jobs:
-        - build-and-test
+  matrix-tests:
+    jobs:
+      - node/test:
+          version: 10.13.0
+      - node/test:
+          version: 10.13.0
+      - node/test:
+          version: 10.13.0
+  build-and-test:
+    jobs:
+      - build-and-test
