--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,18 +2,16 @@ version: 2.1
 orbs:
   node: circleci/node@2.0.2
 jobs:
-  build-and-test:
+  build:
     docker:
       - image: circleci/mongo:4.0.5-node
-    executor:
-      name: node/default
     steps:
       - checkout
       - node/with-cache:
           steps:
             - run: npm install
-            - run: npm test
+            - run: npm test      
 workflows:
   build-and-test:
     jobs:
-      - build-and-test
+      - build
