--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,17 +1,15 @@
 version: 2.1
-orbs:
-  node: circleci/node@1.1.6
 jobs:
-  build-and-test:
-    executor:
-      name: node/default
+  MongoDB:
+    docker:
+      - image: circleci/mongo:4.0.5
     steps:
-      - checkout
-      - node/with-cache:
-          steps:
-            - run: npm install
-            - run: npm test
+      - run:
+          name: Show version MongoDB
+          command: |
+            mongod --version
 workflows:
-    build-and-test:
-      jobs:
-        - build-and-test
+ version: 2
+ Example_Workflow:
+   jobs:
+     - MongoDB
