--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,13 +1,5 @@
 version: 2.1
 jobs:
-  MongoDB:
-    docker:
-      - image: circleci/mongo:4.0.5
-    steps:
-      - run:
-          name: Start MongoDB
-          command: |
-            mongod --port 27017
   Node:
     docker:
       - image: circleci/node:10.13.0
@@ -17,13 +9,29 @@ jobs:
           command: |
             node -v
       - checkout
+      - restore_cache:
+          key: dependency-cache-{{ checksum "package-lock.json" }}
       - run:
           name: Install package
           command: |
             npm install
+      - save_cache:
+          key: dependency-cache-{{ checksum "package-lock.json" }}
+          paths:
+            - node_modules
+  Test:
+    docker:
+      - image: circleci/mongo:4.0.5
+      - image: circleci/node:10.13.0
+    steps:
+      - checkout
+      - run:
+          name: Test
+          command: npm test
+          
 workflows:
  version: 2
  Example_Workflow:
    jobs:
-     - MongoDB
      - Node
+     - Test
