--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,7 @@ jobs:
       - run:
           name: Test
           command: |
-            npm test
+            npm run test
           
 workflows:
  version: 2
