--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,6 @@ version: 2.1
 defaults: &defaults
   working_directory: ~/repo
   docker:
-   - image: circleci/mongo:4.0.5
    - image: circleci/node:10.13.0
 jobs:
   Node:
@@ -23,13 +22,20 @@ jobs:
           key: dependency-cache-{{ checksum "package-lock.json" }}
           paths:
             - node_modules
+  Test:
+    docker:
+      - image: circleci/mongo:4.0.5
+    steps:
       - run:
           name: Test
           command: |
             npm test
-      
+          
 workflows:
  version: 2
  Example_Workflow:
    jobs:
      - Node
+     - Test:
+          requires:
+            - Node
