--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,36 +1,30 @@
 version: 2.1
-defaults: &defaults
-  working_directory: ~/repo
-  docker:
-   - image: circleci/node:10.13.0
-   - image: circleci/mongo:4.0.5
 jobs:
-  Node:
-    <<: *defaults
+  install-dependencies:
+    docker:
+      - image: circleci/node:10.13.0
+      - image: circleci/mongo:4.0.5
     steps:
-      - run:
-          name: Show Node version
-          command: |
-            node -v
       - checkout
-      - restore_cache:
-          key: dependency-cache-{{ checksum "package-lock.json" }}
       - run:
-          name: Install package
+          name: npm install
           command: |
             npm install
-      - save_cache:
-          key: dependency-cache-{{ checksum "package-lock.json" }}
-          paths:
-            - node_modules
+  test:
+    docker:
+      - image: circleci/node:10.13.0
+    steps:
       - run:
-          name: Test
+          name: npm test
           command: |
             npm test
-
-          
 workflows:
  version: 2
  Example_Workflow:
    jobs:
-     - Node
+     - install-dependencies
+     - test:
+        type: approval
+        requires:
+          - install-dependencies
+
