--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,7 @@ jobs:
     docker:
       - image: circleci/node:10.13.0
     steps:
+      - checkout
       - run:
           name: npm test
           command: |
