--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,8 @@ jobs:
     docker:
       - image: circleci/node:10.13.0
     steps:
+      - restore_cache:
+          key: dependency-cache-{{ checksum "package-lock.json" }}
       - checkout
       - run:
           name: npm test
